src/objects/WhatsApp_Event__e.object
<CustomObject>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Number__c</fullName>
        <label>From Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_ID__c</fullName>
        <label>Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WhatsApp Event</label>
    <pluralLabel>WhatsApp Events</pluralLabel>
</CustomObject>